--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,11 @@
+NODE_ENV=development
+
 PORT=5001
+
 MONGODB_URI=
+
+JWT_SECRET=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_CLOUD_KEY=
+CLOUDINARY_CLOUD_SECRET=
